--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -1,1 +1,3 @@
-Welcome to GradStat!
+<h1>Welcome to GradStat!</h1>
+<%= link_to "Sign In", signin_path %>
+<%= link_to "Sign Up", new_student_path %>
