--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -5,6 +5,9 @@
   <%= f.label :last_name, "Last Name" %><br>
   <%= f.text_field :last_name %>
 
+  <%= f.label :email, "Please enter your email:" %><br>
+  <%= f.text_field :email %>
+
   <%= f.label :username, "Please enter a username:" %><br>
   <%= f.text_field :username %>
 
