--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -5,7 +5,7 @@
   <%= f.label :hours_spent, "How many hours did you spend on this lesson?" %><br>
   <%= f.number_field :hours_spent %>
 
-  <%= f.label :completed, "Completed?" %><br>
+  <%= f.label :completed, "Lesson completed?" %><br>
   <%= f.number_field :completed %>
 
   <%= f.submit %>
