--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <% if current_user %>
-              <li><%= link_to "Hello, #{current_user.name}!", student_path(current_user) %></li>
+              <li><%= link_to "Hello, #{current_user.username}!", student_path(current_user) %></li>
               <li><%= link_to "Courses", courses_path %></li>
               <li><%= link_to "Log Out", logout_path, method: :delete %></li>
             <% else %>
