--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -1,12 +1,17 @@
 <%= form_for(@course) do |f| %>
-  <%= f.label :name, "Name" %><br>
-  <%= f.text_field :name %>
-
-  <%= f.label :hours_spent, "How many hours did you spend on this lesson?" %><br>
-  <%= f.number_field :hours_spent %>
-
-  <%= f.label :completed, "Lesson completed?" %><br>
-  <%= f.number_field :completed %>
-
-  <%= f.submit %>
+  <ul>  
+    <%= f.label :name %>:<br>
+    <%= name_field(@course) %>
+  </ul>  
+  <ul>
+    <%= f.label :hours_spent, "How much time did you spend on this lesson?" %><br>
+    <%= f.number_field :hours_spent, min: 0 %> minutes
+  </ul>    
+  <ul>
+    <%= f.label :completed, "Lesson completed? (Check if completed)" %>
+    <%= f.check_box :completed %>
+  </ul>    
+  <ul>
+    <%= f.submit "Add Course" %>
+  </ul>
 <% end %>
