--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -12,14 +12,10 @@
     <%= f.text_field :email %>
   </ul>
   <ul>
-    <%= f.label :username %>:<br>
-    <%= f.text_field :username %>
-  </ul>
-  <ul>
     <%= f.label :password %>:<br>
     <%= f.password_field :password %>
   </ul>
   <ul>
-    <%= f.submit "Create Account" %>
+    <%= f.submit %>
   </ul>
 <% end %>
