--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,1 +1,7 @@
-<%= render 'form' %>
+<%= form_for(@student) do |f| %>
+    <%= render 'form' %>
+    <ul>
+        <%= f.label :username %>:<br>
+        <%= f.text_field :username %>
+    </ul>
+<% end %>
