--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,3 +1,3 @@
 <p>Name: <%= @student.full_name %></p>
 <p>Email: <%= @student.email %></p>
-<p><%= link_to 'See Courses', courses_path %></p>
+<p><%= link_to 'Edit Profile', edit_student_path %></p>
