--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -7,7 +7,7 @@
     <% @courses.each do |course| %>
         <tr>
             <td><%= course.name %></td>
-            <td><%= course.hours_spent %></td>
+            <td><%= course.time_spent %></td>
             <td><%= course.completed %></td>
         </tr>
     <% end %>
