edit view for student profile

--- a/app/views/students/edit.html.erb
+++ b/app/views/students/edit.html.erb
@@ -1,4 +1,4 @@
 <%= render 'form' %>
-
-<%= link_to 'Show', @student %> |
-<%= link_to 'Back', students_path %>
+<ul>
+    <%= link_to 'Back', @student %>
+</ul>
