--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,15 +1,15 @@
 <table>
+  <tr>
+    <th>Course &nbsp; &nbsp; &nbsp;</th>
+    <th>Logged Hours &nbsp; &nbsp; &nbsp;</th>
+    <th>Completed?</th>
+  </tr>
+  <% @courses.each do |course| %>
     <tr>
-        <th>Course &nbsp;</th>
-        <th>Time Spent &nbsp; &nbsp; &nbsp;</th>
-        <th>Completed?</th>
+        <td><%= link_to course.name, courses_path(@course) %></td>
+        <td><%= course.time_spent %></td>
+        <td><%= course.completed %></td>
     </tr>
-    <% @courses.each do |course| %>
-        <tr>
-            <td><%= link_to course.name, course_path(course) %></td>
-            <td><%= course.time_spent %></td>
-            <td><%= course.completed %></td>
-        </tr>
-    <% end %>
+  <% end %>   
 </table>
 <p><%= link_to 'Add New Course', new_course_path %></p>
