add date column and delete button to courses

--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -11,7 +11,11 @@
   <ul>
     <%= f.label :completed, "Lesson completed? (Check if completed)" %>
     <%= f.check_box :completed %>
-  </ul>    
+  </ul>
+  <ul>
+    <%= f.label :date %>
+    <%= f.date_field :date %>
+  </ul>
   <ul>
     <%= f.submit %>
   </ul>
