--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -3,10 +3,18 @@
     <th>Course &nbsp; &nbsp; &nbsp;</th>
     <th>Time Spent &nbsp; &nbsp; &nbsp;</th>
     <th>Completed?</th>
+    <th>Date</th>
   </tr>
   <tr>
     <td><%= @course.name %></td>
     <td><%= @course.time_spent %></td>
-    <td><%= @course.completed %></td>
+    <td><%= @course.completed ? "Yes" : "No" %></td>
+    <td><%= @course.date %></td>
   </tr>
 </table>
+<% if current_user.admin %>
+ <p><%= link_to 'Edit Course', edit_course_path %> | <%= link_to 'Back', courses_path %></p>
+  <p><%= link_to 'Delete', course_path(@course), method: :delete %></p>
+<% else %>
+  <%= link_to 'Edit Course', edit_course_path %> | <%= link_to 'Back', courses_path %>
+<% end %>
