revert to predefined course name vales; remove chart comparison link

--- a/app/views/charts/index.html.erb
+++ b/app/views/charts/index.html.erb
@@ -1,4 +1,11 @@
 <h2>Course Comparison</h2>
 <table>
-
+  <tr>
+    <th>Course &nbsp; &nbsp; &nbsp;</th>
+    <th>Time Spent &nbsp; &nbsp; &nbsp;</th>
+    <th>Completed?</th>
+    <th>Date</th>
+  </tr>
+  <tr>
+  </tr>
 </table>
