--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,9 +17,14 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <% if current_user %>
-              <li><%= link_to "#{current_user.username}!", student_path(current_user) %></li>
+              <li>
+                <% if current_user.admin? %>
+                  <%= link_to "ADMIN #{current_user.username}", student_path(current_user) %>
+                <% else %>
+                  <%= link_to "#{current_user.username}!", student_path(current_user) %>
+                <% end %>
+              </li>
               <li><%= link_to "Courses", courses_path %></li>
-              <li><%= link_to "Comparison Chart", charts_path %></li>
               <li><%= link_to "Log Out", logout_path, method: :delete %></li>
             <% else %>
               <li><%= link_to "Sign Up", new_student_path %></li>
