--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@course) do |f| %>
+<%= form_for([@student, @course]) do |f| %>
   <ul>
     <%= f.label :name, "Select Course:" %><br>
     <%= f.collection_select :name, Course::LESSONS, :to_s, :to_s, value: params[:name], include_blank: true %>
