add class methods custom setter/getter to course

--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,16 +1,22 @@
 <table>
   <tr>
-    <th>Course &nbsp; &nbsp; &nbsp;</th>
-    <th>Logged Hours &nbsp; &nbsp; &nbsp;</th>
+    <th>Course</th>
+    <th>Logged Hours</th>
     <th>Completed?</th>
     <th>Date</th>
+    <% if current_user.admin? %>
+      <th>Username</th>
+    <% end %>
   </tr>
   <% @courses.each do |course| %>
     <tr>
-        <td><%= link_to course.name, course_path(course) %></td>
-        <td><%= course.time_spent %></td>
-        <td><%= course.completed ? "Yes" : "No" %></td>
-        <td><%= course.date %></td>
+      <td><%= link_to course.name, course_path(course) %></td>
+      <td><%= course.time_spent %></td>
+      <td><%= course.completed ? "Yes" : "No" %></td>
+      <td><%= course.date %></td>
+      <% if current_user.admin? %>
+        <td><%= course.student_username %></td>
+      <% end %>
     </tr>
   <% end %>
   <tr>
