--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,7 +1,7 @@
 <table>
   <tr>
-    <th>Course &nbsp; &nbsp; &nbsp;</th>
-    <th>Time Spent &nbsp; &nbsp; &nbsp;</th>
+    <th>Course</th>
+    <th>Time Spent</th>
     <th>Completed?</th>
     <th>Date</th>
   </tr>
@@ -13,8 +13,6 @@
   </tr>
 </table>
 <% if current_user.admin %>
- <p><%= link_to 'Edit Course', edit_course_path %> | <%= link_to 'Back', courses_path %></p>
   <p><%= link_to 'Delete', course_path(@course), method: :delete %></p>
-<% else %>
-  <%= link_to 'Edit Course', edit_course_path %> | <%= link_to 'Back', courses_path %>
 <% end %>
+<%= link_to 'Edit Course', edit_course_path %> | <%= link_to 'Back', courses_path %>
