--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,11 +24,22 @@
                   <%= link_to "#{current_user.username}", student_path(current_user) %>
                 <% end %>
               </li>
-              <li><%= link_to "Courses", courses_path %></li>
-              <li><%= link_to "Log Out", logout_path, method: :delete %></li>
+              <li>
+                <%= link_to "Courses", courses_path %>
+              </li>
+              <li>
+                <%= link_to "Compare Chart", charts_path %>
+              </li>
+              <li>
+                <%= link_to "Log Out", logout_path, method: :delete %>
+              </li>
             <% else %>
-              <li><%= link_to "Sign Up", new_student_path %></li>
-              <li><%= link_to "Log In", login_path %></li>
+              <li>
+                <%= link_to "Sign Up", new_student_path %>
+              </li>
+              <li>
+                <%= link_to "Log In", login_path %>
+              </li>
             <% end %>
           </ul>
         </div><!--/.nav-collapse -->
