delete avatar model; add comment model; debug nested resource requirement

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -12,7 +12,17 @@
     <td><%= @course.date %></td>
   </tr>
 </table>
-<% if current_user.admin %>
-  <p><%= link_to 'Delete', course_path(@course), method: :delete %></p>
-<% end %>
+<br>
+<table>
+  <tr>
+    <th>Notes/Comments</th>
+  </tr>
+  <tr>
+    <td><%= render @course.comments %></td>
+  </tr>
+</table>
+<%= render 'comments/form' %>
+<p>
+  <%= link_to 'Delete Course', course_path(@course), method: :delete %>
+</p>
 <%= link_to 'Edit Course', edit_course_path %> | <%= link_to 'Back', courses_path %>
