--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,36 +13,20 @@
       <div class="container">
         <div class="navbar-header">
         <a class="navbar-brand" href="<%= root_url %>"/>Home</a>
-        </div>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
             <% if current_user %>
-              <li>
                 <% if current_user.admin? %>
-                  <%= link_to "ADMIN #{current_user.username}", student_path(current_user) %>
+                  | <%= link_to "ADMIN #{current_user.username}", student_path(current_user) %>
                 <% else %>
-                  <%= link_to "#{current_user.username}", student_path(current_user) %>
+                  | <%= link_to "#{current_user.username}", student_path(current_user) %>
                 <% end %>
-              </li>
-              <li>
-                <%= link_to "Courses", courses_path %>
-              </li>
-              <li>
-                <%= link_to "Compare Chart", charts_path %>
-              </li>
-              <li>
-                <%= link_to "Log Out", logout_path, method: :delete %>
-              </li>
+                | <%= link_to "Courses", courses_path %>
+                | <%= link_to "Compare Chart", charts_path %>
+                | <%= link_to "Log Out", logout_path, method: :delete %>
             <% else %>
-              <li>
-                <%= link_to "Sign Up", new_student_path %>
-              </li>
-              <li>
-                <%= link_to "Log In", login_path %>
-              </li>
+                | <%= link_to "Sign Up", new_student_path %>
+                | <%= link_to "Log In", login_path %>
             <% end %>
-          </ul>
-        </div><!--/.nav-collapse -->
+          </div>
       </div>
     </div>
 
