add omniauth to app

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,17 +14,18 @@
         <div class="navbar-header">
         <a class="navbar-brand" href="<%= root_url %>"/>Home</a>
             <% if current_user %>
-                <% if current_user.admin? %>
-                  | <%= link_to "ADMIN #{current_user.username}", student_path(current_user) %>
-                <% else %>
-                  | <%= link_to "#{current_user.username}", student_path(current_user) %>
-                <% end %>
+              <% if current_user.admin? %>
+                | <%= link_to "ADMIN #{current_user.username}", student_path(current_user) %>
+              <% else %>
+                | <%= link_to "#{current_user.username}", student_path(current_user) %>
+              <% end %>
                 | <%= link_to "Courses", courses_path %>
                 | <%= link_to "Compare Chart", charts_path %>
                 | <%= link_to "Log Out", logout_path, method: :delete %>
             <% else %>
                 | <%= link_to "Sign Up", new_student_path %>
                 | <%= link_to "Log In", login_path %>
+                | <%= link_to "Log in with Google", "/auth/google_oauth2" %>
             <% end %>
           </div>
       </div>
