add css and refactor code in views

--- a/app/views/charts/index.html.erb
+++ b/app/views/charts/index.html.erb
@@ -1,8 +1,8 @@
-<h2>Course Comparison</h2>
-<table>
+<h2>Course Compare Chart</h2>
+<table id="students">
   <tr>
     <th>Course</th>
-    <th>Average Time Spent</th>
+    <th>Average Time Spent (All Students)</th>
   </tr>
   <% @average_time.each do |course, time| %>
     <tr>
