--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,4 +1,5 @@
-<table>
+<h2>Course Log</h2>
+<table id="students">
   <tr>
     <th>Course</th>
     <th>Logged Hours</th>
@@ -15,7 +16,7 @@
       <td><%= course.completed ? "Yes" : "No" %></td>
       <td><%= course.date %></td>
       <% if current_user.admin? %>
-        <td><%= course.student_username %></td>
+        <td><%= course.student.username %></td>
       <% end %>
     </tr>
   <% end %>
@@ -32,4 +33,6 @@
     <td><%= @student_completed %> of <%= @courses.course_completed %></td>
   </tr>
 </table>
-<p><%= link_to 'Add New Course', new_course_path %></p>
+<ul>
+  <%= link_to "Add New Course", new_course_path, class: "submit_button" %>
+</ul>
