--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -1,21 +1,37 @@
-<%= form_for(@student) do |f| %>
-  <ul>
-    <%= f.label :first_name, "First Name:" %><br>
-    <%= f.text_field :first_name %>
-  </ul>
-  <ul>
-    <%= f.label :last_name, "Last Name:" %><br>
-    <%= f.text_field :last_name %>
-  </ul>
-  <ul>
-    <%= f.label :email %>:<br>
-    <%= f.text_field :email %>
-  </ul>
-  <ul>
-    <%= f.label :password %>:<br>
-    <%= f.password_field :password %>
-  </ul>
-  <ul>
-    <%= f.submit %>
-  </ul>
-<% end %>
+<div class="form"> 
+  <%= form_for(@student) do |f| %>
+    <% if @student.errors.any? %>
+      <div id="error_explanation">
+        <ul>
+          <% @student.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+    <ul>
+      <%= f.label :username, "Username:" %><br>
+      <%= f.text_field :username %>
+    </ul>
+    <ul>
+      <%= f.label :first_name, "First Name:" %><br>
+      <%= f.text_field :first_name %>
+    </ul>
+    <ul>
+      <%= f.label :last_name, "Last Name:" %><br>
+      <%= f.text_field :last_name %>
+    </ul>
+    <ul>
+      <%= f.label :email, "Email:" %><br>
+      <%= f.text_field :email %>
+    </ul>
+    <ul>
+      <%= f.label :password, "Password:" %><br>
+      <%= f.password_field :password %>
+    </ul>
+    <ul>
+      <%= f.submit class: "submit_button" %>
+    </ul>
+  <% end %>
+</div>
