--- a/app/views/students/edit.html.erb
+++ b/app/views/students/edit.html.erb
@@ -1,4 +1,5 @@
-<%= render 'form' %>
 <ul>
-    <%= link_to 'Back', @student %>
+    <%= link_to "Back to Profile", @student, class: "submit_button" %>
 </ul>
+<h2>Edit Profile</h2>
+<%= render "form" %>
