--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,7 +1,2 @@
-<%= form_for(@student) do |f| %>
-    <ul>
-        <%= f.label :username %>:<br>
-        <%= f.text_field :username %>
-    </ul>
-    <%= render 'form' %>
-<% end %>
+<h2>Create Account</h2>
+<%= render "form" %>
