--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,3 +1,15 @@
-<p>Name: <%= @student.full_name %></p>
-<p>Email: <%= @student.email %></p>
-<p><%= link_to 'Edit Profile', edit_student_path %></p>
+<h2>Your Profile</h2>
+<div class="form">
+    <ul>
+        Name: <%= @student.full_name %>
+    </ul>
+    <ul>
+        Username: <%= @student.username %>
+    </ul>
+    <ul>
+        Email: <%= @student.email %>
+    </ul>
+    <ul>
+        <%= link_to "Edit Profile", edit_student_path, class: "submit_button" %>
+    </ul>
+</div>
