--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,2 +1,4 @@
-<%= comment.comment %>
-<%= link_to 'Delete', course_comment_path(@course, comment), method: :delete %></p>
+<p>
+    <%= comment.comment %><br><br>
+    <%= link_to "Delete Comment", course_comment_path(@course, comment), method: :delete, data: {confirm: "Are you sure you want to delete this comment?"}, class: "button" %>
+</p>
