--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,9 +1,4 @@
 <%= form_for([@course, @course.comments.build]) do |f| %>
-    <ul>
-      <%= f.label :comment, 'Any Comments?' %>
-      <%= f.text_field :comment %>
-    </ul>
-    <ul>
-      <%= f.submit %>
-    </ul>
-  <% end %>  
+    <%= f.text_field :comment %>
+    <%= f.submit "Add Comment", class: "button" %>
+<% end %>  
