--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,4 +1,8 @@
-<table>
+<ul>
+  <%= link_to "Back to Courses", courses_path, class: "submit_button" %>
+</ul>
+<h2><%= @course.name %></h2>
+<table id="students">
   <tr>
     <th>Course</th>
     <th>Time Spent</th>
@@ -6,23 +10,31 @@
     <th>Date</th>
   </tr>
   <tr>
-    <td><%= @course.name %></td>
+    <td>
+      <%= @course.name %>  
+      <%= link_to "Edit Course", edit_course_path, class: "button" %>
+    </td>
     <td><%= @course.time_spent %></td>
     <td><%= @course.completed ? "Yes" : "No" %></td>
     <td><%= @course.date %></td>
   </tr>
 </table>
 <br>
-<table>
+<table id="students">
   <tr>
     <th>Notes/Comments</th>
   </tr>
   <tr>
-    <td><%= render @course.comments %></td>
+    <td>
+      <ul>
+        <%= render @course.comments %>
+      </ul>
+      <ul>
+        <%= render "comments/form" %>
+      </ul>
+    </td>
   </tr>
 </table>
-<%= render 'comments/form' %>
-<p>
-  <%= link_to 'Delete Course', course_path(@course), method: :delete %>
-</p>
-<%= link_to 'Edit Course', edit_course_path %> | <%= link_to 'Back', courses_path %>
+<ul>
+  <%= link_to "Delete #{@course.name}", course_path(@course), method: :delete, data: {confirm: "Are you sure you want to delete #{@course.name}?"}, class: "submit_button" %>
+</ul>
