--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
         <% else %>
             <li><%= link_to "Sign Up", new_student_path %></li>
             <li><%= link_to "Log In", login_path %></li>
-            <li><%=link_to "Login via Facebook", student_facebook_omniauth_authorize_path %></li>
+            <li><%= link_to "Login via Facebook", "/auth/facebook", app_id: "2013801175598444" %></li>
         <% end %>
       </ul>
     </div>
