--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   <body>
     <div class="navbar">
       <ul>
-        <li><a href="<%= root_url %>"/>Home</a></li>
+        <li><a href="<%= root_url %>">Home</a></li>
         <% if current_user %>
           <% if current_user.admin? %>
             <li><%= link_to "ADMIN #{current_user.username} Profile", student_path(current_user) %></li>
