--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
             <li><%= link_to "Compare Chart", charts_path %></li>
             <li><%= link_to "Log Out", logout_path, method: :delete %></li>
         <% else %>
-            <li><%= link_to "Sign Up", new_student_path %></li>
+            <li><%= link_to "Sign Up", signup_path %></li>
             <li><%= link_to "Log In", login_path %></li>
             <li><%= link_to "Login via Facebook", "/auth/facebook" %></li>
         <% end %>
