--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,4 +1,5 @@
 <p>
     <%= comment.comment %><br><br>
+    <%= link_to "Edit Comment", edit_course_comment_path(@course, comment), class: "button" %>
     <%= link_to "Delete Comment", course_comment_path(@course, comment), method: :delete, data: {confirm: "Are you sure you want to delete this comment?"}, class: "button" %>
 </p>
