debug comment edit

--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -1,2 +1,5 @@
 <h2>Editing Comment</h2>
-<%= render "form" %>
+<%= form_tag course_comment_path([@course, @comment]), method: "patch" do %>
+    <%= text_field_tag :comment, @comment.comment %>
+    <%= submit_tag "Edit Comment", class: "button" %>
+<% end %>  
